src/styles/layout.css
@font-face {
    font-family: digital;
    src: url("../fonts/digital-7 (mono).ttf");
}

@font-face {
    font-family: workSansThin;
    src: url("../fonts/WorkSans-Thin.ttf");
}

@font-face {
    font-family: workSansLight;
    src: url("../fonts/WorkSans-Light.ttf");
}

@font-face {
    font-family: workSans;
    src: url("../fonts/WorkSans-Regular.ttf");
}

@font-face {
    font-family: workSansMedium;
    src: url("../fonts/WorkSans-Medium.ttf");
}

@font-face {
    font-family: workSansBold;
    src: url("../fonts/WorkSans-Bold.ttf");
}

:not(input):not(textarea), :not(input):not(textarea)::after, :not(input):not(textarea)::before {
    -webkit-user-select: none;
    user-select: none;
    cursor:text;
}

::-webkit-scrollbar {
    width: 8px;
    position: absolute;
    cursor:pointer;
}

::-webkit-scrollbar-track {
    background: #282828;
}

::-webkit-scrollbar-thumb {
    background: #505050;
}

input, button, textarea, :focus {
    outline: none;
}

body {
    background-color:#202020;
}

#windowBar {
    position: fixed;
    top:0px;
    left:0px;
    width:100vw;
    height:22px;
    z-index: -5;
    background-color: #202020; 
    cursor:pointer;
}

#content {
    position: fixed;
    top:22px;
    left:0px;
}

#background {
    position:fixed;
    display: block;
    margin: 0px;
    top:0px;
    left:0px;
    width:100vw;
    height:100vh;
    cursor:default;
}

.indicator {
    position:absolute;
    background-color:rgba(0,0,0,0);
    width:5vw;
    height:100vh;
    padding:0px;
    display:inline-block;
    margin:0px;
    z-index: -1;
}

#rightIndicator {
    left:95vw;
}

#centreBackground {
    position:absolute;
    background-color:#202020;
    width:100vw;
    height:100vh;
    padding:0px;
    display:inline-block;
    margin:0px;
    left:0vw;
    line-height: 100vh;
    z-index: -3;
    background-size: cover;
    background-position: center;
}

#timer {
    vertical-align:middle;
    text-align: center;
    font-size: 30vmin;
    font-family: digital;
    color:#E0E0E0;
    margin:0px;
    z-index: 0;
}

#scramble {
    -webkit-user-select: text;
    user-select: text;
    position: fixed;
    top:32px;
    right: 20px;
    vertical-align:top;
    text-align: right;
    font-size:4vh;
    line-height:4vh;
    max-width:calc(95vw - 250px);
    max-height:30vh;
    color:#C0C0C0;
    font-family: workSansLight;
    overflow-y: scroll;
    word-wrap:normal;
    margin: 0px;
    display: block;
}

#stats {
    display: block;
    position: absolute;
    width: 254px;
    left:10px;
    top:10px;
    background-color: rgba(0,0,0,0);
}

button {
    display: inline-block;
    height: 30px;
    font-family: workSans;
    font-size: 18px;
    color:#F0F0F0;
    background-color: #303030;
    border-color: #606060;
    border-radius: 0px;
    border-style: solid;
    border-width: 2px;
    transition: 0.1s;
}

button:hover {
    cursor: pointer;
    border-color: #404040;
    transition: 0.1s;
}

button:focus {
    outline:0;
}

select:focus {
    outline:0;
}

input:focus {
    outline:0;
}


button:active {
    cursor: pointer;
    background-color: #202020;
    border-color: #404040;
    color:#A0A0A0;
    transition: 0.1s;
}

.cross {
    display: block;
    width:30px;
    height:30px;
    background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='26' height='26' viewBox='0 0 24 24'><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='6,6 18,18'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='18,6 6,18'></polyline></svg>"); 
    background-color: #303030;
}

#sessionButton {
    width:30px;
    margin-left: 10px;
    margin-top: 0px;
    background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0' y='0' width='24' height='24' viewBox='0 0 24 24'><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='4,12 6,12'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='4,6 6,6'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='4,18 6,18'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='8,12 20,12'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='8,6 20,6'></polyline><polyline stroke-width='2' cap='square' fill='none' stroke='#F0F0F0' points='8,18 20,18'></polyline></svg>");
    
    background-size: contain;
    padding: 0px;
    position: absolute;
    top:40px;
    left:210px;
}

#preferencesButton,#previewButton {
    width:30px;
    height:30px;
    position: fixed;
    right:324px;
    bottom:10px;
    background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><circle cx='12' cy='12' r='5' stroke='#F0F0F0' stroke-width='3' fill='none'></circle><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='12,3 12,6'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='12,21 12,18'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='3,12 6,12'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='21,12 18,12'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='18.2,5.8 16,8'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='5.8,18.2 8,16'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='5.8,5.8 8,8'></polyline><polyline stroke-width='3.5' cap='square' fill='none' stroke='#F0F0F0' points='18.2,18.2 16,16'></polyline></svg>"); 
    padding: 0px;
}
/* ... */

